fix(style): Avoid layout shift when switching between diagram and code

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1186,6 +1186,8 @@
       }
 
       .diagram-container {
+        max-width: 100%;
+
         &:not(:has(.diagram-fit, .diagram-scrollable)) {
           display: flex;
         }
